# cyoa-crime-and-punishment

./: Cargo.toml  LICENSE  README.md  build.sh  index.html
.github/workflows/: main.yml
assets/config/: game.json
assets/css/: style.css
assets/js/: index.js
assets/pkg/: cyoa_crime_and_punishment.js  cyoa_crime_and_punishment_bg.wasm
src/: lib.rs
