[package]
name = "cyoa-crime-and-punishment"
version = "0.1.1"
authors = ["Sambhav Saggi <17993169+sambhavsaggi@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/sambhavsaggi/cyoa-CaP"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
cyoa = "0.1"
console_error_panic_hook = "0.1.6"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
